# x402

./: .gitignore  package.json
.github/workflows/: publish_npm_scoped_x402_all.yml  publish_npm_scoped_x402_concordium.yml  publish_npm_scoped_x402_near.yml
docs/: docs.json  sdk-features.md
docs/advanced-concepts/: lifecycle-hooks.mdx
docs/core-concepts/: network-and-token-support.mdx
docs/dev-tools/: facilitators.md
docs/extensions/: builder-code.mdx  offer-receipt.mdx  overview.mdx  sign-in-with-x.mdx
docs/getting-started/: quickstart-for-buyers.mdx
docs/schemes/: exact.mdx  overview.mdx
e2e/: .env-local  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.ts
e2e/mock-facilitator/: index.ts
e2e/src/: logger.ts  mcpHealth.ts  types.ts
examples/python/facilitator/builder-code/: .env-local  README.md  main.py  pyproject.toml
examples/python/servers/builder-code/: .env-local  README.md  main.py  pyproject.toml
examples/typescript/: pnpm-lock.yaml  pnpm-workspace.yaml
go/: CHANGELOG.md  client.go  client_test.go  constants.go  interfaces.go  server.go  server_hooks.go  server_hooks_test.go
go/.changes/: v2.13.0.md  v2.19.0.md
go/.changeset/: siwx-origin-binding.md
go/extensions/: README.md
go/http/: client.go  client_test.go  server.go  server_test.go
go/mcp/: client.go  client_test.go  server.go  server_test.go
python/x402/: CHANGELOG.md  __init__.py  client_base.py  interfaces.py  (+3 more)
scripts/: prepare-typescript-release.py  tag-go-release.py  tag-typescript-release.py
typescript/: pnpm-lock.yaml  pnpm-workspace.yaml
(+252 files in other folders)
