[project]
name = "x402-builder-code-server-example"
version = "0.1.0"
description = "Example of using x402 builder-code extension for ERC-8021 attribution"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "x402[fastapi,evm,extensions]",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
required-version = ">=0.11.0"
exclude-newer = "3 days"
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
